--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "github-markdown-css": "^5.1.0",
     "marked": "^4.2.3",
     "normalize.css": "^8.0.1",
     "postcss-nested": "^6.0.0"
