--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.13",
-    "github-markdown-css": "^5.1.0",
-    "marked": "^4.2.3",
-    "normalize.css": "^8.0.1",
-    "postcss-nested": "^6.0.0"
+    "fast-glob": "^3.2.12",
+    "gray-matter": "^4.0.3",
+    "vitepress": "1.0.0-alpha.33",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.33.1",
-    "@types/marked": "^4.0.7",
-    "@unocss/nuxt": "^0.47.5",
-    "@unocss/preset-attributify": "^0.47.5",
-    "@vueuse/core": "^9.6.0",
-    "@vueuse/nuxt": "^9.6.0",
-    "eslint": "^8.29.0",
-    "nuxt": "3.0.0",
-    "postcss": "^8.4.19",
-    "typescript": "^4.9.3"
+    "eslint": "^8.29.0"
   }
 }
