--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "private": true,
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "pnpm run --filter docs docs:dev",
+    "docs:build": "pnpm run --filter docs docs:build",
+    "example:dev": "pnpm run --filter example dev"
   },
-  "dependencies": {
-    "fast-glob": "^3.2.12",
-    "gray-matter": "^4.0.3",
-    "vitepress": "1.0.0-alpha.33",
-    "vue": "^3.2.45"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^0.33.1",
-    "eslint": "^8.29.0"
-  }
+  "private": true
 }
