--- a/docs/package.json
+++ b/docs/package.json
@@ -2,9 +2,9 @@
   "name": "docs",
   "private": true,
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "vitepress",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "dependencies": {
     "fast-glob": "^3.2.12",
