--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "fast-glob": "^3.2.12",
     "gray-matter": "^4.0.3",
-    "vitepress": "1.0.0-alpha.33",
+    "vitepress": "1.0.0-beta.5",
     "vue": "^3.2.45"
   },
   "devDependencies": {
