--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.33.1",
-    "eslint": "^8.29.0"
+    "eslint": "^8.29.0",
+    "unocss": "^0.53.5"
   }
 }
